# rust-package-template

./: CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TODO.md
.githooks/: README.md  pre-commit  pre-push
.github/workflows/: CI.yaml  crates_io_publish.yaml
book/: book.toml
book/src/: SUMMARY.md
book/src/python_list/: README.md
book/src/python_list/macros/: README.md  list_macro.md
book/src/python_list/methods/: README.md  append.md
changelog/: 0.0.1.md  0.0.2.md  CHANGELOG.md
dev-ideas/: Cargo.toml
dev-ideas/examples/: test.rs
dev-ideas/src/: main.rs
docs/: README.md
examples/: example.rs
src/: lib.rs
static/img/logo/: README.md
tests/: common.rs  test_{{ package-name }}.rs  test_{{package-name}}.rs
